# bd_academia

./: pyproject.toml
db_academy/: manage.py
db_academy/db_academy/: asgi.py  settings.py  urls.py  wsgi.py
db_academy/org_information/: apps.py  models.py  serializers.py  urls.py  views.py
db_academy/org_information/migrations/: 0001_initial.py  0002_organizations_activity_type.py
